# NAO_SLAM

./: README.md  nao_grab_cam.py
Carto/: Mapping.py  README.md  odometrie.py
Carto/Mapping/: Load.py  Map.py  Obstacle.py  Robot.py  UsrManual  UsrManual~  interfaceMap.py  interfaceMap.py~
Carto/Odometrie/: odometrie.py
Encapsulation/: README.md  environnement.py  fsm.py  fsm_mononao.py  fsm_multinao_nao1.py  fsm_multinao_nao2.py  ihm_mononao.py  ihm_multinao.py  nao.py
Hardware/: Capteur.py  README.md
Visio/: README.md  image_grab.py
Visio/cpp/: CMakeLists.txt
Visio/cpp/src/: Arbre.cpp  Arbre.h  Blobs.cpp  Blobs.h  Body.cpp  Body.h  Calibrate.cpp  Calibrate.cpp~  Calibrate.h  Carte.cpp  Carte.h  Flux_cam.cpp  Flux_cam.h  Gui.cpp  Gui.h  IO_file.cpp  IO_file.h  Instruments.cpp  Instruments.h  Reco.cpp  Reco.h  Tracking.cpp  Tracking.h  Transfo.cpp  Transfo.h  Utils.cpp  Utils.h  hsv_params.h  struct_HSV_bound.h  struct_nom.h  struct_vignette.h  struct_wrap_bound.h
Visio/cpp/src/mains/: calibration.cpp  calibration.cpp~  flot_optique.cpp  histogramme.cpp  inertia.cpp  nao_pseudo3d.cpp~  wrap.cpp
Visio/cpp/src/mains/minority-report/: mono_control.cpp  mono_control_click.cpp  multi_control.cpp
Visio/cpp/src/mains/nao/: biblobs.cpp  nao3d.cpp  nao_pseudo3d.cpp  nao_pseudo3d_and_tracking.cpp  nao_pseudo3d_equi.cpp  test_HSV.cpp
Visio/cpp/src/mains/sous-marin/: metadonnees.cpp  redressement.cpp
Visio/cpp/src/mapping/: Arbre.cpp  Arbre.h  Carte.cpp  Carte.h  Multimap.cpp  Multimap.h
Visio/processing/: Blobs.cpp  Blobs.h  Body.cpp  Body.h  Calibrate.h  Flux_cam.cpp  Flux_cam.h  Gui.cpp  Gui.h  Makefile  Reco.cpp  Reco.h  Tracking.cpp  Tracking.h  Transfo.cpp  Transfo.h  Utils.cpp  Utils.h  main.cpp  naqahdah  struct_HSV_bound.h
Visio/processing/mains/: biblobs.cpp  calibration.cpp  mono_control.cpp  mono_control_click.cpp  multi_control.cpp  nao3d.cpp
Visio/processing/src/: Reco.h  Tracking.cpp  Transfo.cpp
Visio/processing/src/mains/: blobs.cpp
Visio/python/: image_grab.py  nao_grab_cam.py  nao_grab_cam2.py
Visio/python/Remote/: Actionneur.py  Configuration.py  GUI.py  Infos_commandes.py  Interface_client.py  Interface_serveur.py  README.md  main.py  main_client.py  main_local.py  main_serveur.py
Visio/qibuild/: HOWTO.md
Visio/qibuild/.qi/: worktree.xml
Visio/qibuild/nao_visio/: CMakeLists.txt  README.md  main.cpp  qiproject.xml
Visio/qibuild/naopencv/: CMakeLists.txt  qiproject.xml
Visio/qibuild/naopencv/old_version/: Makefile
Visio/qibuild/naopencv/old_version/src/: Blobs.h  Calibrate.cpp  Gui.cpp  Gui.h  Reco.cpp  Tracking.cpp  Tracking.h  Transfo.h
Visio/qibuild/naopencv/old_version/src/mains/: biblobs.cpp  calibration.cpp  flot_optique.cpp  mono_control_click.cpp  nao3d.cpp
Visio/qibuild/naopencv/src/: Head.cpp  Head.h  Leds.cpp  Leds.h  Move.cpp  Move.h  NAO_flux.h  Speak.h  nao3d.cpp  test.cpp  tracker.cpp
Visio/qibuild/naopencv/src/NAO/: Head.cpp  Head.h  Leds.h  Move.cpp  Move.h  NAO_flux.cpp  Speak.cpp  Speak.h
Visio/qibuild/naopencv/src/common/: Blobs.cpp  Blobs.h  Body.h  Calibrate.cpp  Calibrate.h  Gui.h  Reco.cpp  Reco.h  Tracking.cpp  Tracking.h  Transfo.cpp  Transfo.h  struct_wrap_bound.h
Visio/qibuild/naopencv/src/images/: Blobs.h  Body.cpp  Calibrate.cpp  Gui.cpp  Gui.h  Tracking.cpp  Tracking.h  Utils.h  struct_HSV_bound.h
Visio/qibuild/naopencv/src/mains/: nao3d.cpp  test.cpp  tracker.cpp
Visio/qibuild/src/adv_process/: CMakeLists.txt  NAO_flux.cpp  NAO_flux.h  qiproject.xml
Visio/qibuild/src/adv_process/src/: NAO_flux.cpp  NAO_flux.h
Visio/qibuild/src/adv_process/src/common/: Blobs.cpp  Blobs.h  Body.cpp  Body.h  Calibrate.cpp  Calibrate.h  Flux_cam.cpp  Flux_cam.h  Reco.cpp  Reco.h  Tracking.h  Transfo.cpp  Transfo.h  Utils.cpp  struct_HSV_bound.h  struct_wrap_bound.h
Visio/qibuild/src/adv_process/src/mains/: main.cpp
Visio/qibuild/src/getimage/: getimages.cpp
